--- a/modules-available/minilinux/templates/filelist.html
+++ b/modules-available/minilinux/templates/filelist.html
@@ -50,4 +50,8 @@
 {{#dltask}}
 <div class="hidden" data-tm-id="{{dltask}}" data-tm-callback="dlTmCb"></div>
 {{/dltask}}
+{{#changelog}}
+<h4>{{lang_changelog}}</h4>
+{{changelog}}
+{{/changelog}}
 <div class="slx-space"></div>
