[serversetup-bwlp-ipxe] UI/UX tweaks
* Decluttered bootentry View in menu editor
* Show details for hook bootentry in menu editor
* Buttons for "save and reload" in menu/bootentry editor

--- a/modules-available/serversetup-bwlp-ipxe/templates/ipaddress.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/ipaddress.html
@@ -29,10 +29,12 @@
 				</tr>
 				{{/ips}}
 			</table>
-			<p>
-				{{lang_recompileHint}}
-			</p>
 		</form>
+	</div>
+	<div class="panel-body">
+		<p>
+			{{lang_recompileHint}}
+		</p>
 		<form method="post" action="?do=ServerSetup">
 			<input type="hidden" name="token" value="{{token}}">
 			<button class="btn btn-default" name="action" value="compile" {{disabled}}>
