--- a/modules-available/serversetup-bwlp-ipxe/templates/ipxe-new-boot-entry.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/ipxe-new-boot-entry.html
@@ -205,6 +205,10 @@
 			</ul>
 
 			<div class="buttonbar text-right">
+				<button type="submit" class="btn btn-primary" name="next" value="reload" {{disabled}}>
+					<span class="glyphicon glyphicon-floppy-disk"></span>
+					{{lang_saveAndReload}}
+				</button>
 				<button type="submit" class="btn btn-primary" {{disabled}}>
 					<span class="glyphicon glyphicon-floppy-disk"></span>
 					{{lang_save}}
