--- a/style/default.css
+++ b/style/default.css
@@ -70,6 +70,10 @@ body {
 	color: gray;
 }
 
+.monospace {
+	font-family: monospace, monospace;
+}
+
 .slx-label {
 	font-weight: bold;
 	margin: auto;
